--- a/api/now.json
+++ b/api/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "petgram-server",
+  "name": "advanced-react-petgram-project",
   "alias": ["petgram-api"],
   "builds": [{ "src": "index.js", "use": "@now/node" }],
   "routes": [{
