--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"now-build": "npm run build",
 		"build": "webpack",
 		"lint": "standard",
 		"start": "webpack-dev-server --host 0.0.0.0",
@@ -22,6 +23,7 @@
 	"homepage": "https://github.com/malejandro13/advanced-react-petgram-project#readme",
 	"devDependencies": {
 		"@babel/core": "^7.9.0",
+		"@babel/plugin-transform-runtime": "^7.9.0",
 		"@babel/preset-env": "^7.9.0",
 		"@babel/preset-react": "^7.9.4",
 		"babel-loader": "^8.1.0",
@@ -31,13 +33,29 @@
 		"webpack-dev-server": "^3.10.3"
 	},
 	"dependencies": {
+		"@apollo/react-hooks": "^3.1.4",
+		"@reach/router": "^1.3.3",
+		"apollo-boost": "^0.4.7",
+		"graphql": "^15.0.0",
+		"graphql-tag": "^2.10.3",
+		"idx": "^2.5.6",
+		"intersection-observer": "^0.7.0",
+		"nprogress": "^0.2.0",
 		"react": "^16.13.1",
-		"react-dom": "^16.13.1"
+		"react-apollo": "^3.1.4",
+		"react-dom": "^16.13.1",
+		"react-icons": "^3.9.0",
+		"react-loading-skeleton": "^2.0.1",
+		"styled-components": "^5.0.1"
 	},
 	"standard": {
-		"ignore": [ "/api/**" ]
+		"ignore": [
+			"/api/**"
+		]
 	},
 	"eslintConfig": {
-		"extends": [ "./node_modules/standard/eslintrc.json" ]
+		"extends": [
+			"./node_modules/standard/eslintrc.json"
+		]
 	}
 }
