--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"react": "^16.13.1",
 		"react-apollo": "^3.1.4",
 		"react-dom": "^16.13.1",
+		"react-helmet": "^6.0.0",
 		"react-icons": "^3.9.0",
 		"react-loading-skeleton": "^2.0.1",
 		"styled-components": "^5.0.1"
