➕ adding react lazy and propTypes for components

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"now-build": "npm run build",
-		"build": "webpack",
 		"lint": "standard",
+		"build": "webpack --mode development",
+		"start:test": "npx serve dist -s",
+		"serve:test": "npm run build && npm run start:dev",
 		"start": "webpack-dev-server --host 0.0.0.0",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -41,6 +43,7 @@
 		"idx": "^2.5.6",
 		"intersection-observer": "^0.7.0",
 		"nprogress": "^0.2.0",
+		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-apollo": "^3.1.4",
 		"react-dom": "^16.13.1",
